--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.6.0",
+    "@astrojs/react": "^3.3.4",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/poppins": "^5.0.14",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.9",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
