--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "daisyui": "^4.11.1"
   }
 }
